welcome.lessons.welcome.methods.picture.PictureMono3.scala.error
PictureMono3:8: error: expected class or object definition
def replacement() {
^PictureMono3:16: error: expected class or object definition
def faireMotif() {
^PictureMono3:28: error: expected class or object definition
def faireV() {
^PictureMono3:45: error: Unmatched closing brace '}' ignored here
}
^